# python-fan

./: .gitignore  README.md  ToDo.md  setup.cfg
pyfan/: __init__.py  _version.py  core.py  dimless.py  utils.py
tests/: test_core.py  test_version.py
