[metadata]
name = pyfan
version = 0.1.0
author = Matthias Probst
author_email = matth.probst@kit.edu
description = Small repo to work with Fan Measurements and Simulations.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/matthiasprobst/python-fan
classifiers =
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta"

[options]
packages = find:
python_requires = !=3.8
include_package_data = True
install_requires =
    numpy
    matplotlib

[options.extras_require]
test =
    pytest
    pytest-cov
    pylint

[tool:pytest]
python_files = test_*.py
testpaths = tests

[coverage:paths]
source =
    tests
